SERVER-133164 Add additional test cases and update classic to match SBE behavior in path traversal with arrays (#60801)

GitOrigin-RevId: fcf85f6e6c7c8475dfe4967088ade79136655316